[project]
name = "sentinel-backend"
version = "0.1.0"
description = "Sentinel: Agent-driven vendor risk and compliance platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
